@@ -88,13 +88,6 @@
             </label>
             <input ng-model="overwrite" type="text" id="overwrite" value="true" title="Overwrite">
           </div>
-          <!-- Boost is json only, since the XML has it embedded -->
-          <div id="json-only" ng-show="type=='json'">
-            <label for="boost">
-              <a rel="help">Boost</a>
-            </label>
-            <input ng-model="boost" type="text" id="boost" value="1.0" title="Document Boost">
-          </div>
         </div>
       </div>
 
