@@ -85,13 +85,6 @@
             </label>
             <input type="text" id="overwrite" value="true" title="Overwrite">
           </div>
-          <!-- Boost is json only, since the XML has it embedded -->
-          <div id="json-only">
-            <label for="boost">
-              <a rel="help">Boost</a>
-            </label>
-            <input type="text" id="boost" value="1.0" title="Document Boost">
-          </div>
         </div>
       </div>
 
